--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@reduxjs/toolkit": "^1.5.0",
     "nanoid": "^3.1.20",
     "preact": "^10.5.12",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "webpack-cli": "^4.5.0",
     "xstate": "^4.16.2"
   },
